--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,15 +1,10 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(PackageTest CXX)
+project(test_package)
+
+set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(test_package test_package.cpp)
-target_link_libraries(test_package ${CONAN_LIBS})
-
-enable_testing()
-add_test(
-    NAME test_package
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-    COMMAND test_package
-)
+add_executable(${PROJECT_NAME} test_package.cpp)
+target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
